; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_control.c_vout_control_PushBool.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_control.c_vout_control_PushBool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vout_control_PushBool(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @vout_control_cmd_Init(%struct.TYPE_4__* %7, i32 %8)
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @vout_control_Push(i32* %12, %struct.TYPE_4__* %7)
  ret void
}

declare dso_local i32 @vout_control_cmd_Init(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @vout_control_Push(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
